# cowsay-

./: .gitignore  CMakeLists.txt  README.md  test-fortune.sh
src/: CMakeLists.txt  args.cpp  args.hpp  cow.cpp  cow.hpp  main.cpp  main.hpp  utils.cpp  utils.hpp
